--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,40 +1,4 @@
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
+---
+---
 
-nav ul li {
-    position: relative;
-}
-
-nav ul li a {
-    text-decoration: none;
-    padding: 10px 15px;
-    display: block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.dropdown-content li {
-    border-bottom: 1px solid #ccc;
-}
-
-.dropdown-content li a {
-    padding: 10px;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
+@import "jekyll-theme-minimal";
