--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-left: 10;
   margin-right: 10;
   margin-bottom: 1rem;
-  font-family: 'Lucida';
+  font-family: 'Lucida Sans Unicode';
   font-weight: 500;
   line-height: 1.2;
 }
