--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ body {
   margin-bottom: 10;
   margin-left: 10;
   margin-right: 10;
-  font-family: 'Verdana';
+  font-family: 'Geneva';
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
@@ -120,7 +120,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-left: 10;
   margin-right: 10;
   margin-bottom: 1rem;
-  font-family: 'Lucida Sans Unicode';
+  font-family: 'Open Sans';
   font-weight: 500;
   line-height: 1.2;
 }
