--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,10 +92,7 @@
 }
 
 body {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin: 2rem
   font-family: "Noto Sans";
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
